<resources>
    <string name="app_name">TourGuide</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="hotel_image">Hotel Image</string>

    <!-- First Data -->
    <string name="one_name">New York</string>
    <string name="one_date">Fri 14 - Mon 18</string>
    <string name="one_hotel">325</string>
    <string name="one_bed">2</string>
    <string name="one_adult">2</string>
    <string name="one_children">2</string>
    <string-array name="one_restaurent">
        <item>Castello di Casole</item>
        <item>Hotel du Cap-Eden-Roc</item>
        <item>La Bastide de Gordes</item>
    </string-array>
    <string name="one_address">New York, NY, United States</string>

    <!-- Second Data -->
    <string name="two_name">New Jersey</string>
    <string name="two_date">Tue 11 - Mon 18</string>
    <string name="two_hotel">315</string>
    <string name="two_bed">1</string>
    <string name="two_adult">1</string>
    <string name="two_children">2</string>
    <string-array name="two_restaurent">
        <item>Hotel du Cap-Eden-Roc</item>
        <item>Belmond Hotel Splendido</item>
        <item>D-Hotel Maris</item>
    </string-array>
    <string name="two_address">New Jersey, United States</string>

    <!-- Third Data -->
    <string name="three_name">New Hampshire</string>
    <string name="three_date">Mon 18 - Wed 20</string>
    <string name="three_hotel">225</string>
    <string name="three_bed">3</string>
    <string name="three_adult">2</string>
    <string name="three_children">2</string>
    <string-array name="three_restaurent">
        <item>Cotton House Hotel</item>
        <item>Lime Wood</item>
        <item>Grand Hotel a Villa Feltrinelli</item>
    </string-array>
    <string name="three_address">New Hampshire, United States</string>

    <!-- Fourth Data -->
    <string name="four_name">Nebraska</string>
    <string name="four_date">Fri 7 - Mon 11</string>
    <string name="four_hotel">325</string>
    <string name="four_bed">2</string>
    <string name="four_adult">2</string>
    <string name="four_children">2</string>
    <string-array name="fourth_restaurent">
        <item>Ett Hem</item>
        <item>The Gritti Palace</item>
        <item>Les Fermes de Marie</item>
    </string-array>
    <string name="four_address">Nebraska City, NE, United States</string>

    <!-- Fifth Data -->
    <string name="five_name">Washignton</string>
    <string name="five_date">Fri 14 - Mon 18</string>
    <string name="five_hotel">375</string>
    <string name="five_bed">2</string>
    <string name="five_adult">2</string>
    <string name="five_children">2</string>
    <string-array name="fifth_restaurent">
        <item>The Gritti Palace</item>
        <item>Grand Hotel a Villa Feltrinelli</item>
        <item>Hotel du Cap-Eden-Roc</item>
    </string-array>
    <string name="five_address">Washington, DC, United States</string>

    <string name="share_intent">Detail Bundle</string>
    <string name="change_location">Change Location</string>
    <string name="dates">Dates</string>
    <string name="beds">Beds</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="change_your_hotel">Change Your Hotel</string>
    <string name="append_hotels">Hotels</string>
    <string name="restaurent">Restaurent</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="food_court">Food Court</string>
    <string name="party_place">Party Place</string>
    <string name="hotel">Hotels</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
</resources>
