<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/hotel" />
        <item
            android:id="@+id/restaurent"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/food_court" />
        <item
            android:id="@+id/nav_food_court"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/restaurent" />
        <item
            android:id="@+id/party_place"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/party_place" />
    </group>

</menu>
